2003-07-08	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Merge-in librpc/configure.ac.
	* Makefile.am: Add librpc to SUBDIRS.
	Remove @subdirs@.

2003-07-08	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Merge-in libcsupport/configure.ac.
	* Makefile.am: Add libcsupport to SUBDIRS.

2003-07-08	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Merge-in posix/configure.ac.
	Merge-in itron/configure.ac.
	Misc. cosmetical changes.
	* Makefile.am: Add posix, itron to SUBDIRS.

2003-07-08	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Merge-in libnetworking/configure.ac.
	Remove "rtems-" from RTEMS_VERSION.
	Add AC_CHECK_FUNCS([strsep strcasecmp snprintf]).
	* Makefile.am: Add libmisc to SUBDIRS.

2003-07-08	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Merge-in libmisc/configure.ac.
	* Makefile.am: Add libmisc to SUBDIRS.

2003-07-08	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Merge-in libfs/configure.ac.
	* Makefile.am: Add libfs to SUBDIRS.

2003-07-08	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Merge-in libblock/configure.ac.
	* Makefile.am: Add libblock to SUBDIRS.

2003-07-08	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Merge-in ada/configure.ac.
	* Makefile.am: Add ada to SUBDIRS.

2003-07-03	Joel Sherrill <joel@OARcorp.com>

	* aclocal/version.m4: Updated to rtems-ss-20030703.

2003-05-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	PR 409:
	* include/Makefile.am: Add rtems/stdint.h
	* include/rtems/stdint.h: New.

2003-05-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	PR 321:
	* aclocal/env-rtemscpu.m4: Remove support for profile-variant.
	* automake/compile.am: Ditto.
	* automake/local.am: Ditto.

2003-05-14	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* automake/compile.am: Remove LIBSUFFIX_VA (unused).

2003-05-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/env-rtemscpu.m4: Merge-in env-rtemsbsp.m4.
	* aclocal/env-rtemsbsp.m4: Remove.